I made some changes in the search section

--- a/index.html
+++ b/index.html
@@ -66,19 +66,19 @@
     <!-- HEADER END -->
 
 
-    <!-- USED PHONE SECTION -->
+    <!-- SEARCH SECTION -->
 
     <section class="flex items-center justify-between bg-gray-300">
         <div class="pl-6">
-            <h1 class="font-bold text-6xl italic">YOUR HOME OF USED PHONES</h1>
+            <h1 class="font-bold pt-2 text-4xl md:text-6xl italic">YOUR HOME OF USED PHONES</h1>
 
-            <div class="flex items-center rounded border-solid border-2 border-black mt-6 w-2/3">
+            <div class="flex items-center mb-8 mr-8 rounded border-solid border-2 border-black mt-6 lg:w-2/3">
                 <div class="w-full">
-                    <input class="px-2 py-4 underline decoration-gray-400 w-full" type="text"
+                    <input class="px-2 py-2 md:py-4 underline decoration-gray-400 w-full" type="text"
                         placeholder="Search for iPhones, Samsung, Huawei Phones">
                 </div>
 
-                <div class="p-4 bg-gray-600 text-white border-l-2 border-black">
+                <div class="p-2 md:p-4 bg-gray-600 text-white border-l-2 border-black">
                     <a href="">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
                             stroke="currentColor" stroke-width="2">
@@ -91,12 +91,12 @@
             </div>
 
         </div>
-        <div class="md:bg-yellow-400 ">
+        <div class="lg:bg-yellow-400 hidden sm:block">
             <img class="" src="../GetDPhone/img/usedphone.png" alt="">
         </div>
     </section>
 
-    <!-- USED PHONE SECTION ENDS -->
+    <!-- SEARCH SECTION ENDS -->
 
 
 </body>
