--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <!-- SEARCH SECTION -->
 
-    <section class="flex items-center justify-between bg-gray-300">
+    <section class="flex items-center justify-between bg-gray-300 h-80 sm:h-auto">
         <div class="pl-6">
             <h1 class="font-bold pt-2 text-4xl md:text-6xl italic">YOUR HOME OF USED PHONES</h1>
 
@@ -98,6 +98,46 @@
 
     <!-- SEARCH SECTION ENDS -->
 
+    <!-- MAIN SECTION -->
+    <main>
+
+        <section>
+            <div>
+                <h1 class="text-center font-bold text-4xl mt-4">WHY CHOOSE US?</h1>
+            </div>
+
+            <!-- cards -->
+
+            <div class="flex flex-col lg:flex-row mt-10 mx-10">
+                <div class="bg-gray-100 flex items-center flex-col pt-4 lg:pt-6 mb-10 lg:mr-10">
+                    <img class="mb-4" src="../GetDPhone/img/PayOnDelivery.png" alt="">
+                    <h1 class="font-bold text-2xl">Pay on Delivery</h1>
+                    <p class="text-center p-4">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore soluta
+                        dolores expedita ea esse corporis ipsam nam numquam blanditiis ducimus sit sapiente, minima
+                        necessitatibus iure consectetur maxime accusantium voluptate culpa.</p>
+                </div>
+
+                <div class="bg-gray-100 flex items-center flex-col pt-4 mb-10 lg:mr-10">
+                    <img class="mb-4" src="../GetDPhone/img/ReturnPolicy.png" alt="">
+                    <h1 class="font-bold text-2xl">Return Policy</h1>
+                    <p class="text-center p-4">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore soluta
+                        dolores expedita ea esse corporis ipsam nam numquam blanditiis ducimus sit sapiente, minima
+                        necessitatibus iure consectetur maxime accusantium voluptate culpa.</p>
+                </div>
+
+                <div class="bg-gray-100 flex items-center flex-col pt-4 mb-10">
+                    <img class="mb-4" src="../GetDPhone/img/100%Guarantee.png" alt="">
+                    <h1 class="font-bold text-2xl">100% guaranteed</h1>
+                    <p class="text-center p-4">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore soluta
+                        dolores expedita ea esse corporis ipsam nam numquam blanditiis ducimus sit sapiente, minima
+                        necessitatibus iure consectetur maxime accusantium voluptate culpa.</p>
+                </div>
+
+            </div>
+
+        </section>
+
+    </main>
 
 </body>
 
