--- a/index.html
+++ b/index.html
@@ -137,6 +137,38 @@
 
         </section>
 
+        <!-- Featured Phones Section -->
+
+        <section>
+            <div class="flex justify-between items-center mx-4">
+                <h1 class="font-bold text-xl">Featured Phones</h1>
+                <p class="text-3xl">
+                    <span>&#139;</span>
+                    <span>&#155;</span>
+                </p>
+            </div>
+            <div class="flex flex-row mb-4 justify-center items-center">
+                <div class="">
+                    <img class="mb-4" src="../GetDPhone/img/Apple iPhone 11 Pro Max.png" alt="">
+                    <h1 class="text-center font-bold mt-2">APPLE iPhone 11 Pro Max</h1>
+
+                </div>
+
+                <div class="">
+                    <img class="mb-4" src="../GetDPhone/img/Samsung S20.png" alt="">
+                    <h1 class="text-center font-bold mt-2">SAMSUNG 20</h1>
+
+                </div>
+
+                <div class="">
+                    <img class="" src="../GetDPhone/img/Huawei Mate 40 Pro.png" alt="">
+                    <h1 class="text-center font-bold mt-2">HUAWEI Mate 40 Pro</h1>
+                </div>
+
+            </div>
+
+        </section>
+
     </main>
 
 </body>
