Created a folder for the images and started a section called testimonials section

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
     <!-- HEADER SECTION-->
 
-    <header class="w-full flex justify-between items-center">
+    <header class="w-full flex justify-between items-center fixed bg-gray-100">
 
         <div class="p-4">
             <h1 class="font-bold text-xl">getdphone</h1>
         </div>
 
-        <div class="px-4 cursor-pointer md:hidden" id="burger">
+        <div class="px-4 cursor-pointer md:hidden">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
                 stroke="currentColor" stroke-width="2">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
@@ -110,7 +110,7 @@
 
             <div class="flex flex-col lg:flex-row mt-10 mx-10">
                 <div class="bg-gray-100 flex items-center flex-col pt-4 lg:pt-6 mb-10 lg:mr-10">
-                    <img class="mb-4" src="../GetDPhone/img/PayOnDelivery.png" alt="">
+                    <img class="mb-4" src="../GetDPhone/img/icons/PayOnDelivery.png" alt="">
                     <h1 class="font-bold text-2xl">Pay on Delivery</h1>
                     <p class="text-center p-4">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore soluta
                         dolores expedita ea esse corporis ipsam nam numquam blanditiis ducimus sit sapiente, minima
@@ -118,7 +118,7 @@
                 </div>
 
                 <div class="bg-gray-100 flex items-center flex-col pt-4 mb-10 lg:mr-10">
-                    <img class="mb-4" src="../GetDPhone/img/ReturnPolicy.png" alt="">
+                    <img class="mb-4" src="../GetDPhone/img/icons/ReturnPolicy.png" alt="">
                     <h1 class="font-bold text-2xl">Return Policy</h1>
                     <p class="text-center p-4">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore soluta
                         dolores expedita ea esse corporis ipsam nam numquam blanditiis ducimus sit sapiente, minima
@@ -126,7 +126,7 @@
                 </div>
 
                 <div class="bg-gray-100 flex items-center flex-col pt-4 mb-10">
-                    <img class="mb-4" src="../GetDPhone/img/100%Guarantee.png" alt="">
+                    <img class="mb-4" src="../GetDPhone/img/icons/100%Guarantee.png" alt="">
                     <h1 class="font-bold text-2xl">100% guaranteed</h1>
                     <p class="text-center p-4">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore soluta
                         dolores expedita ea esse corporis ipsam nam numquam blanditiis ducimus sit sapiente, minima
@@ -140,6 +140,7 @@
         <!-- Featured Phones Section -->
 
         <section>
+
             <div class="flex justify-between items-center mx-4">
                 <h1 class="font-bold text-xl">Featured Phones</h1>
                 <p class="text-3xl">
@@ -147,26 +148,66 @@
                     <span>&#155;</span>
                 </p>
             </div>
+
             <div class="flex flex-row mb-4 justify-center items-center">
                 <div class="">
-                    <img class="mb-4" src="../GetDPhone/img/Apple iPhone 11 Pro Max.png" alt="">
+                    <img class="mb-4" src="../GetDPhone/img/FeaturedPhones/Apple iPhone 11 Pro Max.png" alt="">
                     <h1 class="text-center font-bold mt-2">APPLE iPhone 11 Pro Max</h1>
 
                 </div>
 
                 <div class="">
-                    <img class="mb-4" src="../GetDPhone/img/Samsung S20.png" alt="">
+                    <img class="mb-4" src="../GetDPhone/img/FeaturedPhones/Samsung S20.png" alt="">
                     <h1 class="text-center font-bold mt-2">SAMSUNG 20</h1>
 
                 </div>
 
                 <div class="">
-                    <img class="" src="../GetDPhone/img/Huawei Mate 40 Pro.png" alt="">
-                    <h1 class="text-center font-bold mt-2">HUAWEI Mate 40 Pro</h1>
+                    <img class="" src="../GetDPhone/img/FeaturedPhones/Huawei Mate 40 Pro.png" alt="">
+                    <h1 class="text-center font-bold mt-3">HUAWEI Mate 40 Pro</h1>
                 </div>
 
             </div>
 
+        </section>
+
+        <!-- Testimonials section -->
+
+        <section>
+            <div class="mx-4 my-10">
+                <h1 class="font-bold text-xl ">Testimonials</h1>
+            </div>
+
+            <div class="flex items-center">
+                <div>
+                    <span class="text-8xl font-light ml-4">&#139;</span>
+                </div>
+                <div>
+                    <div class="mx-5 px-2.5 md:mx-10 mb-3 md:px-5 lg:mx-20 lg:mb-6 lg:px-10 flex items-center flex-col">
+                        <p class="md:text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, pariatur
+                            fuga
+                            iure id odit assumenda numquam sit modi tenetur cupiditate esse aperiam fugiat saepe eum
+                            iste?
+                            Numquam dolores recusandae quisquam?
+                            Deserunt ab, libero necessitatibus, voluptas, enim facere tempora atque sapiente nesciunt
+                            cum et
+                            eveniet ipsum odio. Rerum distinctio unde saepe eos non! Harum officia libero dolorum ipsa
+                            accusantium fuga. Culpa.</p>
+
+                            <div class="mt-2">
+                                <img class="w-12 h-12" src="../GetDPhone/img/testimonial.png" alt="">
+                            </div>
+
+                            <div>
+                                <p class="font-bold">John Pope</p>
+                            </div>
+
+                    </div>
+                </div>
+                <div class="text-8xl font-light mr-4">
+                    <span>&#155;</span>
+                </div>
+            </div>
         </section>
 
     </main>
