--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!-- HEADER SECTION-->
 
-    <header class="w-full flex justify-between items-center fixed bg-gray-100">
+    <header class="w-full flex justify-between items-center sticky top-0 bg-gray-100">
 
         <div class="p-4">
             <h1 class="font-bold text-xl">getdphone</h1>
@@ -68,7 +68,7 @@
 
     <!-- SEARCH SECTION -->
 
-    <section class="flex items-center justify-between bg-gray-300 h-80 sm:h-auto">
+    <section class="flex items-center justify-between bg-gray-300">
         <div class="pl-6">
             <h1 class="font-bold pt-2 text-4xl md:text-6xl italic">YOUR HOME OF USED PHONES</h1>
 
@@ -173,15 +173,18 @@
 
         <!-- Testimonials section -->
 
-        <section>
+        <section class="">
+
             <div class="mx-4 my-10">
                 <h1 class="font-bold text-xl ">Testimonials</h1>
             </div>
 
             <div class="flex items-center">
+
                 <div>
                     <span class="text-8xl font-light ml-4">&#139;</span>
                 </div>
+
                 <div>
                     <div class="mx-5 px-2.5 md:mx-10 mb-3 md:px-5 lg:mx-20 lg:mb-6 lg:px-10 flex items-center flex-col">
                         <p class="md:text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, pariatur
@@ -192,23 +195,114 @@
                             Deserunt ab, libero necessitatibus, voluptas, enim facere tempora atque sapiente nesciunt
                             cum et
                             eveniet ipsum odio. Rerum distinctio unde saepe eos non! Harum officia libero dolorum ipsa
-                            accusantium fuga. Culpa.</p>
+                            accusantium fuga. Culpa.
+                        </p>
 
-                            <div class="mt-2">
-                                <img class="w-12 h-12" src="../GetDPhone/img/testimonial.png" alt="">
-                            </div>
+                        <div class="mt-2">
+                            <img class="w-12 h-12" src="../GetDPhone/img/testimonial.png" alt="">
+                        </div>
 
-                            <div>
-                                <p class="font-bold">John Pope</p>
-                            </div>
+                        <div>
+                            <p class="font-bold">John Pope</p>
+                        </div>
 
                     </div>
+
                 </div>
+
                 <div class="text-8xl font-light mr-4">
                     <span>&#155;</span>
                 </div>
+
+            </div>
+
+        </section>
+
+        <!-- pre-ordered Samsung section -->
+
+        <section class="flex flex-col md:flex-row items-center bg-gray-100 ">
+            <div>
+                <h1
+                    class="font-bold p-6 text-4xl text-center md:text-2xl md:mx-5 md:p-6 lg:text-4xl lg:mx-10 lg:p-6 italic">
+                    GET YOUR USED PRE-OWNED SAMSUNG <span class="text-xl md:text-1.5xl lg:text-3xl">
+                        & have it delivered to you tomorrow<span>
+                </h1>
+                <button class="bg-black text-white py-2 px-3 rounded text-sm ml-20">SHOP NOW</button>
+            </div>
+            <div class="w-full">
+                <img src="../GetDPhone/img/MultipleSamsungPhone.png" alt="">
             </div>
         </section>
+
+        <!-- pre-ordered Samsung section ends -->
+
+        <!-- Footer -->
+        <footer class="mt-12 bg-gray-900 text-gray-100 px-12 py-8">
+            <div class="flex justify-between">
+                <div class="">
+                    <h1 class="font-bold text-xl ">getdphone</h1>
+                </div>
+                <div class="">
+                    <h2 class="border-b-2">Quick Links</h2>
+                    <ul>
+                        <a href="">
+                            <li>Sign Up</li>
+                        </a>
+                        <a href="">
+                            <li>About Us</li>
+                        </a>
+                        <a href="">
+                            <li>Shop</li>
+                        </a>
+                        <a href="">
+                            <li>Contact Us</li>
+                        </a>
+                    </ul>
+                </div>
+
+                <div>
+                    <h2 class="border-b-2">Others</h2>
+                    <ul>
+                        <a href="">
+                            <li>User FAQs</li>
+                        </a>
+                        <a href="">
+                            <li>Contact Us</li>
+                        </a>
+                        <a href="">
+                            <li>Legal</li>
+                        </a>
+                        <a href="">
+                            <li>Privacy Policy</li>
+                        </a>
+                        <a href="">
+                            <li>Terms and Conditions</li>
+                        </a>
+                    </ul>
+                </div>
+                <div>
+                    <h2 class="border-b-2">Products</h2>
+                    <ul>
+                        <a href="">
+                            <li>iPhone</li>
+                        </a>
+                        <a href="">
+                            <li>Samsung</li>
+                        </a>
+                        <a href="">
+                            <li>Huawei</li>
+                        </a>
+                    </ul>
+                </div>
+                <div>
+                    <p>Subscribe to our newsletter and be the first to know about our updates</p>
+                    <div>
+                        <input type="text" class="rounded p-2" placeholder="Email Address">
+                        <button class="bg-gray-100 text-blue-400 font-bold rounded p-2">Subscribe</button>
+                    </div>
+                </div>
+            </div>
+        </footer>
 
     </main>
 
