I have concluded the footer section

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                     GET YOUR USED PRE-OWNED SAMSUNG <span class="text-xl md:text-1.5xl lg:text-3xl">
                         & have it delivered to you tomorrow<span>
                 </h1>
-                <button class="bg-black text-white py-2 px-3 rounded text-sm ml-20">SHOP NOW</button>
+                <button class="bg-black text-white py-2 px-3 rounded text-sm ml-40 sm:ml-80 md:ml-40 lg:ml-60">SHOP NOW</button>
             </div>
             <div class="w-full">
                 <img src="../GetDPhone/img/MultipleSamsungPhone.png" alt="">
@@ -237,22 +237,23 @@
         <!-- pre-ordered Samsung section ends -->
 
         <!-- Footer -->
-        <footer class="mt-12 bg-gray-900 text-gray-100 px-12 py-8">
-            <div class="flex justify-between">
+
+        <footer class="mt-20 bg-gray-900 text-gray-100 px-12 py-8">
+            <div class="flex flex-col lg:flex-row justify-between">
                 <div class="">
-                    <h1 class="font-bold text-xl ">getdphone</h1>
+                    <h1 class="font-bold text-4xl mb-6 lg:mb-0">getdphone</h1>
                 </div>
                 <div class="">
-                    <h2 class="border-b-2">Quick Links</h2>
-                    <ul>
+                    <h2 class="underline decoration-2 underline-offset-8 ">Quick Links</h2>
+                    <ul class="mt-3 mb-10">
                         <a href="">
-                            <li>Sign Up</li>
+                            <li class="mb-0 md:mb-2">Sign Up</li>
                         </a>
                         <a href="">
-                            <li>About Us</li>
+                            <li class="mb-0 md:mb-2">About Us</li>
                         </a>
                         <a href="">
-                            <li>Shop</li>
+                            <li class="mb-0 md:mb-2">Shop</li>
                         </a>
                         <a href="">
                             <li>Contact Us</li>
@@ -261,19 +262,19 @@
                 </div>
 
                 <div>
-                    <h2 class="border-b-2">Others</h2>
-                    <ul>
+                    <h2 class="underline decoration-2 underline-offset-8 ">Others</h2>
+                    <ul class="mt-3 mb-10">
                         <a href="">
-                            <li>User FAQs</li>
+                            <li class="mb-0 md:mb-2">User FAQs</li>
                         </a>
                         <a href="">
-                            <li>Contact Us</li>
+                            <li class="mb-0 md:mb-2">Contact Us</li>
                         </a>
                         <a href="">
-                            <li>Legal</li>
+                            <li class="mb-0 md:mb-2">Legal</li>
                         </a>
                         <a href="">
-                            <li>Privacy Policy</li>
+                            <li class="mb-0 md:mb-2">Privacy Policy</li>
                         </a>
                         <a href="">
                             <li>Terms and Conditions</li>
@@ -281,13 +282,13 @@
                     </ul>
                 </div>
                 <div>
-                    <h2 class="border-b-2">Products</h2>
-                    <ul>
+                    <h2 class="underline decoration-2 underline-offset-8 ">Products</h2>
+                    <ul class="mt-3 mb-10">
                         <a href="">
-                            <li>iPhone</li>
+                            <li class="mb-0 md:mb-2">iPhone</li>
                         </a>
                         <a href="">
-                            <li>Samsung</li>
+                            <li class="mb-0 md:mb-2">Samsung</li>
                         </a>
                         <a href="">
                             <li>Huawei</li>
@@ -295,10 +296,10 @@
                     </ul>
                 </div>
                 <div>
-                    <p>Subscribe to our newsletter and be the first to know about our updates</p>
-                    <div>
+                    <p>Subscribe to our newsletter and be <br> the first to know about our updates</p>
+                    <div class="mt-4">
                         <input type="text" class="rounded p-2" placeholder="Email Address">
-                        <button class="bg-gray-100 text-blue-400 font-bold rounded p-2">Subscribe</button>
+                        <button class="bg-gray-100 text-blue-400 font-bold rounded p-2 mt-2 sm:mt-0">Subscribe</button>
                     </div>
                 </div>
             </div>
