--- a/index.html
+++ b/index.html
@@ -227,7 +227,8 @@
                     GET YOUR USED PRE-OWNED SAMSUNG <span class="text-xl md:text-1.5xl lg:text-3xl">
                         & have it delivered to you tomorrow<span>
                 </h1>
-                <button class="bg-black text-white py-2 px-3 rounded text-sm ml-40 sm:ml-80 md:ml-40 lg:ml-60">SHOP NOW</button>
+                <button class="bg-black text-white py-2 px-3 rounded text-sm ml-40 sm:ml-80 md:ml-40 lg:ml-60">SHOP
+                    NOW</button>
             </div>
             <div class="w-full">
                 <img src="../GetDPhone/img/MultipleSamsungPhone.png" alt="">
@@ -238,14 +239,14 @@
 
         <!-- Footer -->
 
-        <footer class="mt-20 bg-gray-900 text-gray-100 px-12 py-8">
-            <div class="flex flex-col lg:flex-row justify-between">
+        <footer class="bg-gray-900 text-gray-100">
+            <div class="flex flex-col lg:flex-row justify-between mt-20 px-12 py-8">
                 <div class="">
                     <h1 class="font-bold text-4xl mb-6 lg:mb-0">getdphone</h1>
                 </div>
                 <div class="">
-                    <h2 class="underline decoration-2 underline-offset-8 ">Quick Links</h2>
-                    <ul class="mt-3 mb-10">
+                    <h2 class="underline decoration-2 underline-offset-8 text-lg">Quick Links</h2>
+                    <ul class="mt-3 mb-10 text-lg">
                         <a href="">
                             <li class="mb-0 md:mb-2">Sign Up</li>
                         </a>
@@ -262,8 +263,8 @@
                 </div>
 
                 <div>
-                    <h2 class="underline decoration-2 underline-offset-8 ">Others</h2>
-                    <ul class="mt-3 mb-10">
+                    <h2 class="underline decoration-2 underline-offset-8 text-lg">Others</h2>
+                    <ul class="mt-3 mb-10 text-lg">
                         <a href="">
                             <li class="mb-0 md:mb-2">User FAQs</li>
                         </a>
@@ -277,13 +278,13 @@
                             <li class="mb-0 md:mb-2">Privacy Policy</li>
                         </a>
                         <a href="">
-                            <li>Terms and Conditions</li>
+                            <li class="">Terms and Conditions</li>
                         </a>
                     </ul>
                 </div>
                 <div>
-                    <h2 class="underline decoration-2 underline-offset-8 ">Products</h2>
-                    <ul class="mt-3 mb-10">
+                    <h2 class="underline decoration-2 underline-offset-8 text-lg">Products</h2>
+                    <ul class="mt-3 mb-10 text-lg">
                         <a href="">
                             <li class="mb-0 md:mb-2">iPhone</li>
                         </a>
@@ -296,14 +297,39 @@
                     </ul>
                 </div>
                 <div>
-                    <p>Subscribe to our newsletter and be <br> the first to know about our updates</p>
+                    <p class="text-lg">Subscribe to our newsletter and be <br> the first to know about our updates</p>
                     <div class="mt-4">
                         <input type="text" class="rounded p-2" placeholder="Email Address">
                         <button class="bg-gray-100 text-blue-400 font-bold rounded p-2 mt-2 sm:mt-0">Subscribe</button>
                     </div>
                 </div>
             </div>
-        </footer>
+
+            <hr>
+
+            <div class="flex justify-between items-center flex-col lg:flex-row px-20 py-4">
+
+                <div class="mb-4 lg:mb-0">
+                    Copyright <span class="copyright">&copy</span> 2021. All rights Reserved.
+                </div>
+
+                <div class="flex">
+                    <a href="">
+                        <img src="../GetDPhone/img/Footer icons/youtube.png" alt="" class="h-6 w-6 mr-2"> </a>
+
+                    <a href="">
+                        <img src="../GetDPhone/img/Footer icons/instagram.png" alt="" class="h-6 w-6 mr-2"></a>
+
+                    <a href="">
+                        <img src="../GetDPhone/img/Footer icons/facebook.png" alt="" class="h-6 w-6 mr-2"> </a>
+
+                    <a href="">
+                        <img src="../GetDPhone/img/Footer icons/twitter.png" alt="" class="h-6 w-6"> </a>
+                </div>
+            </div>
+
+         </footer> 
+        <!-- footer end -->
 
     </main>
 
