--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <nav class="hidden md:flex md:justify-between md:items-center">
 
             <div>
-                <a class="p-4 md:text-lg" href="">Home</a>
+                <a class="p-4 md:text-lg" href="index.html">Home</a>
             </div>
 
             <div>
@@ -37,7 +37,7 @@
             </div>
 
             <div>
-                <a class="p-4 md:text-lg" href="">About Us</a>
+                <a class="p-4 md:text-lg" href="about.html">About Us</a>
             </div>
 
             <div>
