I added an image and a section to the about.html

--- a/about.html
+++ b/about.html
@@ -71,6 +71,22 @@
 
     <main>
 
+        <!-- Our story section -->
+
+        <section class="bg-gray-100 flex flex-col md:flex-row items-center">
+            <div class="md:w-1/2">
+                <img src="../GetDPhone/img/UserInterface.png" alt="">
+            </div>
+
+            <div class="font-bold md:w-1/2 text-center m-8">
+                <h1 class="text-4xl mb-10">OUR STORY</h1>
+                <p class="text-xl">GetdPhone is an e-commerce platform for selling used phones from these brands;
+                    Samsung, iPhone and Huawei</p>
+            </div>
+        </section>
+
+        <!-- Our story section ends -->
+
         <!-- Our mission and vision section -->
 
         <section class="flex flex-col justify-center items-center">
@@ -240,9 +256,9 @@
                 </div>
             </div>
 
-         </footer> 
+        </footer>
         <!-- footer end -->
-        
+
     </main>
 
 </body>
