--- a/about.html
+++ b/about.html
@@ -119,46 +119,52 @@
 
 
         <!-- The team section -->
+
         <section>
 
-            <div>
-                <h1 class="text-center font-bold text-2xl mb-6">THE TEAM</h1>
-                <div class="flex flex-col lg:flex-row justify-between items-center">
-                    <div class="md:flex md:flex-row">
-                        <div class="text-center mb-2 lg:mb-2 md:mx-10 md:mb-10">
-                            <img src="../GetDPhone/img/The team/CEO.png" alt="">
-                            <h2 class="font-bold">Nick Jonas</h2>
-                            <span>CEO</span>
-                        </div>
+            <h1 class="text-center font-bold text-2xl mb-6">THE TEAM</h1>
 
-                        <div class="text-center mb-2 lg:mb-2 md:mx-10 md:mb-10">
-                            <img src="../GetDPhone/img/The team/manager.png" alt="">
-                            <h2 class="font-bold">Nick Peter</h2>
-                            <span>Manager</span>
-                        </div>
+            <div class="flex flex-col items-center lg:flex-row">
+
+                <div class="flex flex-col items-center md:flex-row">
+
+                    <div class="text-center md:mx-2 md:px-10">
+                        <img src="../GetDPhone/img/The team/CEO.png" alt="">
+                        <h2 class="font-bold">Nick Jonas</h2>
+                        <span>CEO</span>
                     </div>
 
-                    <div class="md:flex md:flex-row">
 
-                        <div class="text-center mb-2 md:m-10 lg:mb-12">
-                            <img src="../GetDPhone/img/The team/cashier.png" alt="">
-                            <h2 class="font-bold">James Peter</h2>
-                            <span>Cashier</span>
-                        </div>
-
-                        <div class="text-center mb-2 md:m-10 lg:mb-12">
-                            <img src="../GetDPhone/img/The team/adora-staff.png" alt="">
-                            <h2 class="font-bold">Adora Okeke</h2>
-                            <span>Staff</span>
-                        </div>
+                    <div class="text-center md:mx-2 mt-4 md:mt-0 md:px-10">
+                        <img src="../GetDPhone/img/The team/manager.png" alt="">
+                        <h2 class="font-bold">Nick Peter</h2>
+                        <span>Manager</span>
                     </div>
 
-                    <div class="text-center mb-2 mr-10">
-                        <img src="../GetDPhone/img/The team/john-staff.png" alt="">
-                        <h2 class="font-bold">Okon John</h2>
+                </div>
+
+                <div class="flex flex-col items-center md:flex-row md:mt-4 lg:mt-0">
+
+                    <div class="text-center md:mx-2 mt-4 md:mt-0 md:px-10">
+                        <img src="../GetDPhone/img/The team/cashier.png" alt="">
+                        <h2 class="font-bold">James Peter</h2>
+                        <span>Cashier</span>
+                    </div>
+
+                    <div class="text-center md:mx-2 mt-4 md:mt-0 md:px-10">
+                        <img src="../GetDPhone/img/The team/adora-staff.png" alt="">
+                        <h2 class="font-bold">Adora Okeke</h2>
                         <span>Staff</span>
                     </div>
+
                 </div>
+
+                <div class="text-center md:mr-2 md:mt-0 mt-4 lg:pb-6 lg:mr-10">
+                    <img src="../GetDPhone/img/The team/john-staff.png" alt="">
+                    <h2 class="font-bold">Okon John</h2>
+                    <span>Staff</span>
+                </div>
+
             </div>
 
         </section>
@@ -168,7 +174,7 @@
         <!-- Footer -->
 
         <footer class="bg-gray-900 text-gray-100">
-            <div class="flex flex-col lg:flex-row justify-between mt-20 px-12 py-8">
+            <div class="flex flex-col lg:flex-row justify-between mt-40 px-12 py-8">
                 <div class="">
                     <h1 class="font-bold text-4xl mb-6 lg:mb-0">getdphone</h1>
                 </div>
