I started the contact page and added the header section. I linked the contact page with index.html and about.html

--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
             </div>
 
             <div>
-                <a class="p-4 md:text-lg" href="">Contact Us</a>
+                <a class="p-4 md:text-lg" href="contactUs.html">Contact Us</a>
             </div>
 
             <div class="flex px-10 items-center">
