--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
 
             <div>
-                <a class="p-4 md:text-lg" href="">Contact Us</a>
+                <a class="p-4 md:text-lg" href="contactUs.html">Contact Us</a>
             </div>
 
             <div class="flex px-10 items-center">
