I added an image in contactus.html. Added a script file that contains the font family of Gorditas in the head of the html tag. I made adjustments in the font family and size on the nav link

--- a/contactUs.html
+++ b/contactUs.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    fontFamily: {
+                        Gorditas: ["Gorditas", "cursive"],
+                    }
+                }
+            }
+        }
+    </script>
+
     <title>Contact Us</title>
 </head>
+
 <body>
 
     <!-- HEADER SECTION-->
@@ -24,28 +38,28 @@
             </svg>
         </div>
 
-        <nav class="hidden md:flex md:justify-between md:items-center">
+        <nav class="hidden md:flex md:justify-between md:items-center font-Gorditas font-bold">
 
             <div>
-                <a class="p-4 md:text-lg" href="index.html">Home</a>
+                <a class="p-4 md:text-base" href="index.html">Home</a>
             </div>
 
             <div>
-                <a class="p-4 md:text-lg" href="">Shop</a>
+                <a class="p-4 md:text-base" href="">Shop</a>
             </div>
 
             <div>
-                <a class="p-4 md:text-lg" href="about.html">About Us</a>
+                <a class="p-4 md:text-base" href="about.html">About Us</a>
             </div>
 
             <div>
-                <a class="p-4 md:text-lg" href="contactUs.html">Contact Us</a>
+                <a class="p-4 md:text-base" href="contactUs.html">Contact Us</a>
             </div>
 
             <div class="flex px-10 items-center">
 
                 <a href="">
-                    <button class="bg-black border rounded text-gray-100 py-1 px-5 text-sm mr-4">Log in</button>
+                    <button class="bg-black border rounded text-gray-100 py-1 px-8 text-base mr-4">Log in</button>
                 </a>
 
                 <a href="">
@@ -62,6 +76,36 @@
     </header>
 
     <!-- HEADER END -->
-    
+
+    <section>
+
+        <div class="flex justify-between">
+
+            <div>
+                <img src="../GetDPhone/img/contactUs.png" alt="">
+            </div>
+
+            <div>
+                <img src="../GetDPhone/img/contactUs.png" alt="">
+            </div>
+        </div>
+
+    </section>
+
+    <main>
+
+        <section>
+
+            <div class="flex flex-col">
+                <div>
+                    <h1>Send Us a Message</h1>
+                </div>
+            </div>
+
+        </section>
+
+    </main>
+
 </body>
+
 </html>
