--- a/about.html
+++ b/about.html
@@ -6,6 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    fontFamily: {
+                        Gorditas: ["Gorditas", "cursive"],
+                    }
+                }
+            }
+        }
+    </script>
     <title>About Us</title>
 </head>
 
@@ -26,28 +37,28 @@
             </svg>
         </div>
 
-        <nav class="hidden md:flex md:justify-between md:items-center">
+        <nav class="hidden md:flex md:justify-between md:items-center font-Gorditas font-bold">
 
             <div>
-                <a class="p-4 md:text-lg" href="index.html">Home</a>
+                <a class="p-4 md:text-base" href="index.html">Home</a>
             </div>
 
             <div>
-                <a class="p-4 md:text-lg" href="">Shop</a>
+                <a class="p-4 md:text-base" href="">Shop</a>
             </div>
 
             <div>
-                <a class="p-4 md:text-lg" href="about.html">About Us</a>
+                <a class="p-4 md:text-base" href="about.html">About Us</a>
             </div>
 
             <div>
-                <a class="p-4 md:text-lg" href="contactUs.html">Contact Us</a>
+                <a class="p-4 md:text-base" href="contactUs.html">Contact Us</a>
             </div>
 
             <div class="flex px-10 items-center">
 
                 <a href="">
-                    <button class="bg-black border rounded text-gray-100 py-1 px-5 text-sm mr-4">Log in</button>
+                    <button class="bg-black border rounded text-gray-100 py-1 px-8 text-base mr-4">Log in</button>
                 </a>
 
                 <a href="">
