--- a/contactUs.html
+++ b/contactUs.html
@@ -6,12 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
+    
     <script>
         tailwind.config = {
             theme: {
                 extend: {
                     fontFamily: {
                         Gorditas: ["Gorditas", "cursive"],
+                        Lacquer: ["Lacquer", "cursive"],
                     }
                 }
             }
@@ -28,7 +30,7 @@
     <header class="w-full flex justify-between items-center sticky top-0 bg-gray-100">
 
         <div class="p-4">
-            <h1 class="font-bold text-xl">getdphone</h1>
+            <h1 class="font-bold font-Lacquer text-xl">getdphone</h1>
         </div>
 
         <div class="px-4 cursor-pointer md:hidden">
