--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
                 extend: {
                     fontFamily: {
                         Gorditas: ["Gorditas", "cursive"],
+                        Lacquer: ["Lacquer", "cursive"],
                     }
                 }
             }
@@ -27,7 +28,7 @@
     <header class="w-full flex justify-between items-center sticky top-0 bg-gray-100">
 
         <div class="p-4">
-            <h1 class="font-bold text-xl">getdphone</h1>
+            <h1 class="font-bold font-Lacquer text-xl">getdphone</h1>
         </div>
 
         <div class="px-4 cursor-pointer md:hidden">
