--- a/contactUs.html
+++ b/contactUs.html
@@ -14,20 +14,12 @@
                     fontFamily: {
                         Gorditas: ["Gorditas", "cursive"],
                         Lacquer: ["Lacquer", "cursive"],
-                    }
-                }
-            }
-        }
-    </script>
-
-    <script>
-        tailwind.config = {
-            theme: {
-                extend: {
+                    },
                     colors: {
-                        contact: '#F3EFEF',
-                    }
-                }
+                            contact: '#F3EFEF',
+                            contact1: '#C6C6C6',
+                        }
+                }               
             }
         }
     </script>
@@ -110,14 +102,14 @@
 
         <!-- send a message section -->
 
-        <section class="">
+        <section class="font-Gorditas">
 
-            <div class="font-Gorditas bg-contact m-6 p-4 rounded">
+            <div class=" bg-contact m-6 p-4 rounded">
 
                 <h1 class="font-medium text-2xl lg:text-4xl">Send Us a Message</h1>
 
                 <form action="#" class="flex flex-col mx-1 my-6 font-normal text-base">
-                    
+
                     <label for="name" class="mb-2">Name</label>
                     <input id="name" placeholder="Full Name" type="text" class="p-2">
 
@@ -136,11 +128,72 @@
 
                 <div class="flex justify-center">
 
-                    <div class="bg-black text-gray-100 rounded font-medium px-6 py-2 cursor-pointer mb-20">SEND</div>
+                    <div class="bg-black text-gray-100 rounded font-medium px-6 py-2 cursor-pointer mt-10 mb-20">SEND</div>
 
                 </div>
 
             </div>
+
+            <!-- Contact Information -->
+
+            <div class="bg-contact1 m-6 rounded p-4">
+                <h1 class="text-center font-medium text-2xl mb-6">Contact Information</h1>
+                <div class="font-normal">
+
+                    <div class="flex px-4">
+
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+                            stroke="currentColor" stroke-width="2">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z" />
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z" />
+                        </svg>
+                        <p class="pl-4">Suite A9, Banex Plaza Wuse 2, Abuja</p>
+
+                    </div>
+
+                    <div class="flex px-4 mt-10">
+
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+                            stroke="currentColor" stroke-width="2">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" />
+                        </svg>
+                        <p class="pl-4">0703 000 0000, 0814 199 9999</p>
+
+                    </div>
+
+                    <div class="flex px-4 mt-10">
+
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+                            stroke="currentColor" stroke-width="2">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
+                        </svg>
+                        <p class="pl-4">getdphones@gmail.com</p>
+
+                    </div>
+
+                </div>
+
+                <!-- icons -->
+
+                <div class="flex justify-center my-28 ">
+
+                    <a href="">
+                        <img src="../GetDPhone/img/Cus_Info_icons/facebook.png" alt="" class="h-10 w-10 mr-9"> </a>
+
+                    <a href="">
+                        <img src="../GetDPhone/img/Cus_Info_icons/instagram.png" alt="" class="h-10 w-10 mr-9"></a>
+
+                    <a href="">
+                        <img src="../GetDPhone/img/Cus_Info_icons/twitter.png" alt="" class="h-10 w-10"> </a>
+                </div>
+
+            </div>
+            <!-- Contact Information ends -->
+
+               
 
         </section>
         <!-- send a message section ends -->
