--- a/contactUs.html
+++ b/contactUs.html
@@ -16,10 +16,10 @@
                         Lacquer: ["Lacquer", "cursive"],
                     },
                     colors: {
-                            contact: '#F3EFEF',
-                            contact1: '#C6C6C6',
-                        }
-                }               
+                        contact: '#F3EFEF',
+                        contact1: '#C6C6C6',
+                    }
+                }
             }
         }
     </script>
@@ -85,15 +85,15 @@
 
     <section>
 
-        <div class="flex justify-between">
+        <div class="flex justify-center">
 
             <div>
                 <img src="../GetDPhone/img/contactUs.png" alt="">
             </div>
 
-            <!-- <div class="">
+            <div class="hidden lg:block">
                 <img src="../GetDPhone/img/contactUs.png" alt="">
-            </div> -->
+            </div>
         </div>
 
     </section>
@@ -102,13 +102,13 @@
 
         <!-- send a message section -->
 
-        <section class="font-Gorditas">
+        <section class="font-Gorditas bg-contact flex flex-col md:flex-row m-4 lg:mx-40">
 
-            <div class=" bg-contact m-6 p-4 rounded">
+            <div class="mx-2 md:ml-2 md:mr-36 rounded md:w-3/4">
 
-                <h1 class="font-medium text-2xl lg:text-4xl">Send Us a Message</h1>
+                <h1 class="font-medium text-2xl lg:text-4xl mt-6">Send Us a Message</h1>
 
-                <form action="#" class="flex flex-col mx-1 my-6 font-normal text-base">
+                <form action="#" class="flex flex-col my-6 font-normal text-base">
 
                     <label for="name" class="mb-2">Name</label>
                     <input id="name" placeholder="Full Name" type="text" class="p-2">
@@ -128,7 +128,8 @@
 
                 <div class="flex justify-center">
 
-                    <div class="bg-black text-gray-100 rounded font-medium px-6 py-2 cursor-pointer mt-10 mb-20">SEND</div>
+                    <div class="bg-black text-gray-100 rounded font-medium px-6 py-2 cursor-pointer mt-10 mb-20">SEND
+                    </div>
 
                 </div>
 
@@ -136,7 +137,7 @@
 
             <!-- Contact Information -->
 
-            <div class="bg-contact1 m-6 rounded p-4">
+            <div class="bg-contact1 rounded p-4">
                 <h1 class="text-center font-medium text-2xl mb-6">Contact Information</h1>
                 <div class="font-normal">
 
@@ -189,14 +190,125 @@
                     <a href="">
                         <img src="../GetDPhone/img/Cus_Info_icons/twitter.png" alt="" class="h-10 w-10"> </a>
                 </div>
+                <!-- Contact Information ends -->
 
             </div>
-            <!-- Contact Information ends -->
-
-               
 
         </section>
         <!-- send a message section ends -->
+
+        <!-- Footer -->
+
+        <footer class="bg-gray-900 text-gray-100">
+
+            <div class="flex flex-col lg:flex-row justify-between mt-40 px-12 py-8">
+
+                <div class="">
+                    <h1 class="font-bold text-4xl mb-6 lg:mb-0">getdphone</h1>
+                </div>
+
+                <div class="">
+
+                    <h2 class="underline decoration-2 underline-offset-8 text-lg">Quick Links</h2>
+
+                    <ul class="mt-3 mb-10 text-lg">
+                        <a href="">
+                            <li class="mb-0 md:mb-2">Sign Up</li>
+                        </a>
+                        <a href="">
+                            <li class="mb-0 md:mb-2">About Us</li>
+                        </a>
+                        <a href="">
+                            <li class="mb-0 md:mb-2">Shop</li>
+                        </a>
+                        <a href="">
+                            <li>Contact Us</li>
+                        </a>
+                    </ul>
+
+                </div>
+
+                <div>
+
+                    <h2 class="underline decoration-2 underline-offset-8 text-lg">Others</h2>
+
+                    <ul class="mt-3 mb-10 text-lg">
+                        <a href="">
+                            <li class="mb-0 md:mb-2">User FAQs</li>
+                        </a>
+                        <a href="">
+                            <li class="mb-0 md:mb-2">Contact Us</li>
+                        </a>
+                        <a href="">
+                            <li class="mb-0 md:mb-2">Legal</li>
+                        </a>
+                        <a href="">
+                            <li class="mb-0 md:mb-2">Privacy Policy</li>
+                        </a>
+                        <a href="">
+                            <li class="">Terms and Conditions</li>
+                        </a>
+                    </ul>
+
+                </div>
+
+                <div>
+
+                    <h2 class="underline decoration-2 underline-offset-8 text-lg">Products</h2>
+
+                    <ul class="mt-3 mb-10 text-lg">
+                        <a href="">
+                            <li class="mb-0 md:mb-2">iPhone</li>
+                        </a>
+                        <a href="">
+                            <li class="mb-0 md:mb-2">Samsung</li>
+                        </a>
+                        <a href="">
+                            <li>Huawei</li>
+                        </a>
+                    </ul>
+
+                </div>
+
+                <div>
+
+                    <p class="text-lg">Subscribe to our newsletter and be <br> the first to know about our updates</p>
+
+                    <div class="mt-4">
+                        <input type="text" class="rounded p-2" placeholder="Email Address">
+                        <button class="bg-gray-100 text-blue-400 font-bold rounded p-2 mt-2 sm:mt-0">Subscribe</button>
+                    </div>
+
+                </div>
+
+            </div>
+
+            <hr>
+
+            <div class="flex justify-between items-center flex-col lg:flex-row px-20 py-4">
+
+                <div class="mb-4 lg:mb-0">
+                    Copyright <span class="copyright">&copy</span> 2021. All rights Reserved.
+                </div>
+
+                <div class="flex">
+                    <a href="">
+                        <img src="../GetDPhone/img/Footer icons/youtube.png" alt="" class="h-6 w-6 mr-2"> </a>
+
+                    <a href="">
+                        <img src="../GetDPhone/img/Footer icons/instagram.png" alt="" class="h-6 w-6 mr-2"></a>
+
+                    <a href="">
+                        <img src="../GetDPhone/img/Footer icons/facebook.png" alt="" class="h-6 w-6 mr-2"> </a>
+
+                    <a href="">
+                        <img src="../GetDPhone/img/Footer icons/twitter.png" alt="" class="h-6 w-6"> </a>
+                </div>
+
+            </div>
+
+        </footer>
+        <!-- footer end -->
 
     </main>
 
