I added some changes to the product inventory section

--- a/productInventory(Iphone).html
+++ b/productInventory(Iphone).html
@@ -416,6 +416,8 @@
 
             </section>
 
+            <!-- Inventory 2 ends -->
+
         </section>
 
         <!-- Product Inventory(Samsung) ends -->
