I linked the product inventory for samsung

--- a/productInventory(Iphone).html
+++ b/productInventory(Iphone).html
@@ -168,8 +168,8 @@
                 <div class="mb-4 sticky top-1">
 
                     <div class="flex justify-between bg-white p-6 font-bold font-Gorditas lg:text-2xl">
-                        <h1 class="border-b-4 border-red-500"><a href="">IPHONE</a></h1>
-                        <h1 class=""> <a href="">SAMSUNG</a></h1>
+                        <h1 class="border-b-4 border-red-500"><a href="productInventory(Iphone).html">IPHONE</a></h1>
+                        <h1 class=""> <a href="productInventory(Samsung).html">SAMSUNG</a></h1>
                         <h1 class=""> <a href="">HUAWEI</a></h1>
                     </div>
 
