--- a/productInventory(Iphone).html
+++ b/productInventory(Iphone).html
@@ -170,7 +170,7 @@
                     <div class="flex justify-between bg-white p-6 font-bold font-Gorditas lg:text-2xl">
                         <h1 class="border-b-4 border-red-500"><a href="productInventory(Iphone).html">IPHONE</a></h1>
                         <h1 class=""> <a href="productInventory(Samsung).html">SAMSUNG</a></h1>
-                        <h1 class=""> <a href="">HUAWEI</a></h1>
+                        <h1 class=""> <a href="productInventory(Huawei).html">HUAWEI</a></h1>
                     </div>
 
                 </div>
