--- a/productInventory(Samsung).html
+++ b/productInventory(Samsung).html
@@ -179,7 +179,8 @@
 
                     <div class="bg-white font-Gorditas mb-4 md:mb-0 md:mr-2">
 
-                        <img src="../GetDPhone/img/Samsung/Samsung S20.png" alt="" class="">
+                        <a href="products(Samsung).html"> <img src="../GetDPhone/img/Samsung/Samsung S20.png" alt=""
+                                class=""> </a>
 
                         <h2 class="text-center font-bold xl:font-medium md:text-lg text-xl xl:text-2xl mt-2">Samsung S20
                         </h2>
@@ -188,9 +189,9 @@
 
                         <div class="flex justify-center">
 
-                            <button
-                                class="text-center mt-2 text-white bg-button font-bold uppercase rounded-full mb-1 py-2 px-3 text-sm">Buy
-                                Now</button>
+                            <a href="products(Samsung).html"> <button
+                                    class="text-center mt-2 text-white bg-button font-bold uppercase rounded-full mb-1 py-2 px-3 text-sm">Buy
+                                    Now</button> </a>
 
                         </div>
 
