--- a/products(Iphone).html
+++ b/products(Iphone).html
@@ -145,11 +145,15 @@
 
                 <div class="flex">
 
-                    <button class="bg-capacity rounded font-bold mr-4 px-4 py-2"> 64GB <br> <span
-                            class="text-xs font-thin">From N500,000</span> </button>
+                    <div class="bg-capacity rounded mr-4 px-4 py-2">
+                        <p class="font-bold text-center">64GB</p>
+                        <P class="text-xs font-thin">From N500,000</P>
+                    </div>
 
-                    <button class="bg-capacity rounded font-bold px-4 py-2"> 64GB <br> <span
-                            class="text-xs font-thin">From N500,000</span> </button>
+                    <div class="bg-capacity rounded mr-4 px-4 py-2">
+                        <p class="font-bold text-center">128GB</p>
+                        <P class="text-xs font-thin">From N550,000</P>
+                    </div>
 
                 </div>
 
