--- a/products(samsung).html
+++ b/products(samsung).html
@@ -16,12 +16,11 @@
                         Lacquer: ["Lacquer", "cursive"],
                     },
                     colors: {
-                        background: '#E5E5E5',
+                        colors: '#485167',
+                        colora: '#D1B6CC',
+                        colorm: '#B73438',
+                        colors: '#A6C2BB',
                         search: '#545454',
-                        button: '#FF0000',
-                        colori: '#697374',
-                        colorp: '#3F4C48',
-                        colorh: '#FDE4CA',
                         capacity: '#C4C4C4',
                         square: '#6A6A6A',
                     }
@@ -30,7 +29,7 @@
         }
     </script>
 
-    <title>Product Inventory for Iphone</title>
+    <title>Products for Samsung</title>
 
 </head>
 
@@ -121,13 +120,13 @@
 
     <main>
 
-        <!-- Products (iPhone) section -->
+        <!-- Products (Samsung) section -->
 
         <section class="flex flex-col md:flex-row items-center justify-between">
 
             <div class="lg:mr-20">
 
-                <img src="../GetDPhone/img/Products/iphone.png" alt="" class="sm:h-80 lg:h-auto">
+                <img src="../GetDPhone/img/Products/samsung.png" alt="" class="sm:h-80 lg:h-auto">
 
                 <div class="flex mt-4">
                     <div class="bg-square w-20 h-20 mx-2 lg:ml-4 lg:w-32 lg:h-32"></div>
@@ -139,26 +138,31 @@
 
             <div class="font-Gorditas mt-6 lg:mr-12">
 
-                <h1 class="text-3xl lg:font-bold">iPHONE 11 PRO MAX</h1>
+                <h1 class="text-3xl lg:font-bold">Samsung S20</h1>
 
                 <p class="mt-10 font-medium mb-1">Choose your capacity</p>
 
                 <div class="flex">
 
-                    <button class="bg-capacity rounded font-bold mr-4 px-4 py-2"> 64GB <br> <span
-                            class="text-xs font-thin">From N500,000</span> </button>
+                    <div class="bg-capacity rounded mr-4 px-4 py-2">
+                        <p class="font-bold text-center">128GB</p>
+                        <P class="text-xs font-thin">From N170,000</P>
+                    </div>
 
-                    <button class="bg-capacity rounded font-bold px-4 py-2"> 64GB <br> <span
-                            class="text-xs font-thin">From N500,000</span> </button>
-
+                    <div class="bg-capacity rounded mr-4 px-4 py-2">
+                        <p class="font-bold text-center">256GB</p>
+                        <P class="text-xs font-thin">From N200,000</P>
+                    </div>
+                
                 </div>
 
                 <p class="mt-8 mb-1">Choose a color</p>
 
                 <div class="flex">
-                    <div class="rounded-full bg-colori w-6 h-6 mr-2"></div>
-                    <div class="rounded-full bg-colorp w-6 h-6 mr-2"></div>
-                    <div class="rounded-full bg-colorh w-6 h-6"></div>
+                    <div class="rounded-full bg-colors w-6 h-6 mr-2"></div>
+                    <div class="rounded-full bg-colora w-6 h-6 mr-2"></div>
+                    <div class="rounded-full bg-colorm w-6 h-6 mr-2"></div>
+                    <div class="rounded-full bg-colors w-6 h-6"></div>
                 </div>
 
                 <p class="mt-10">Condition</p>
@@ -167,7 +171,7 @@
 
                 <p class="mt-10 mb-1">Quantity</p>
 
-                <select name="quantity" id="quantity" class="border border-black border-2">
+                <select name="quantity" id="quantity" class="border border-black border-2 px-6 mb-4">
                     <option value="one">1</option>
                     <option value="two">2</option>
                     <option value="three">3</option>
@@ -200,31 +204,31 @@
 
                     <div class="font-bold">
 
-                        <img src="../GetDPhone/img/R_Accessories/iphone/Silicone case with magsafe.png" alt="">
+                        <img src="../GetDPhone/img/R_Accessories/Samsung/Silicone Cover Black.png" alt="">
 
-                        <h2 class="text-center mt-4">Silicone Case with MagSafe</h2>
+                        <h2 class="text-center mt-4">Silicone Cover Black</h2>
 
-                        <p class="text-center">N19,000</p>
-
-                    </div>
-
-                    <div class="font-bold">
-
-                        <img src="../GetDPhone/img/R_Accessories/iphone/Airpods Pro.png" alt="">
-
-                        <h2 class="text-center">Airpods Pro</h2>
-
-                        <p class="text-center">N100,000</p>
+                        <p class="text-center">N6,000</p>
 
                     </div>
 
                     <div class="font-bold">
 
-                        <img src="../GetDPhone/img/R_Accessories/iphone/Magsafe Duo charger.png" alt="">
+                        <img src="../GetDPhone/img/R_Accessories/Samsung/Galaxy buds mystic bronxe.png" alt="">
 
-                        <h2 class="text-center">MagSafe Duo Charger</h2>
+                        <h2 class="text-center">Galaxy Buds Mystic Bronze</h2>
 
-                        <p class="text-center">N60,000</p>
+                        <p class="text-center">N40,000</p>
+
+                    </div>
+
+                    <div class="font-bold">
+
+                        <img src="../GetDPhone/img/R_Accessories/Samsung/Wireless charger pad 9W.png" alt="">
+
+                        <h2 class="text-center">Wireless Charger Pad 9W</h2>
+
+                        <p class="text-center">N7,000</p>
 
                     </div>
 
