--- a/productInventory(Iphone).html
+++ b/productInventory(Iphone).html
@@ -36,7 +36,7 @@
 
     <!-- HEADER SECTION-->
 
-    <header class="w-full flex justify-between items-center sticky top-0 bg-gray-100">
+    <header class="w-full flex justify-between items-center top-0 bg-gray-100">
 
         <div class="p-4">
             <h1 class="font-bold font-Lacquer text-xl">getdphone</h1>
@@ -165,7 +165,7 @@
 
             <section class="w-full sm:mr-4">
 
-                <div class="mb-4 sticky top-1">
+                <div class="mb-4 sticky top-0">
 
                     <div class="flex justify-between bg-white p-6 font-bold font-Gorditas lg:text-2xl">
                         <h1 class="border-b-4 border-red-500"><a href="productInventory(Iphone).html">IPHONE</a></h1>
