Refactored file to add padding to the select tag

--- a/products(Iphone).html
+++ b/products(Iphone).html
@@ -171,7 +171,7 @@
 
                 <p class="mt-10 mb-1">Quantity</p>
 
-                <select name="quantity" id="quantity" class="border border-black border-2 mb-4">
+                <select name="quantity" id="quantity" class="border border-black border-2 px-6 mb-4">
                     <option value="one">1</option>
                     <option value="two">2</option>
                     <option value="three">3</option>
