Refactored file to add a cdn link

--- a/productInventory(Huawei).html
+++ b/productInventory(Huawei).html
@@ -115,8 +115,11 @@
 
     </section>
 
-    <div class="flex justify-end font-Gorditas font-medium mr-4">Sort By: Featured
-        <span class="px-2 font-bold">&#8744;</span>
+    <div class="flex justify-end font-Gorditas font-medium mr-4">
+        
+        <p class="mr-2">Sort By: Featured </p>
+        <img src="https://img.icons8.com/external-tanah-basah-basic-outline-tanah-basah/19/000000/external-chevron-arrows-tanah-basah-basic-outline-tanah-basah-4.png"/>
+
     </div>
 
     <!-- SEARCH SECTION ENDS -->
