Refactored file to replace images

--- a/products(Huawei).html
+++ b/products(Huawei).html
@@ -16,10 +16,8 @@
                         Lacquer: ["Lacquer", "cursive"],
                     },
                     colors: {
-                        colors: '#485167',
-                        colora: '#D1B6CC',
-                        colorm: '#B73438',
-                        colors: '#A6C2BB',
+                        colorh: '#F1F6FE',
+                        colorw: '#0E0E0E',
                         search: '#545454',
                         capacity: '#C4C4C4',
                         square: '#6A6A6A',
@@ -126,7 +124,7 @@
 
             <div class="lg:mr-20">
 
-                <img src="../GetDPhone/img/Products/samsung.png" alt="" class="sm:h-80 lg:h-auto">
+                <img src="../GetDPhone/img/Products/Huawei.png" alt="" class="sm:h-80 lg:h-auto">
 
                 <div class="flex mt-4">
                     <div class="bg-square w-20 h-20 mx-2 lg:ml-4 lg:w-32 lg:h-32"></div>
@@ -138,20 +136,15 @@
 
             <div class="font-Gorditas mt-6 lg:mr-12">
 
-                <h1 class="text-3xl lg:font-bold">Samsung S20</h1>
+                <h1 class="text-3xl lg:font-bold">Huawei Mate 40 Pro</h1>
 
                 <p class="mt-10 font-medium mb-1">Choose your capacity</p>
 
-                <div class="flex">
+                <div>
 
-                    <div class="bg-capacity rounded mr-4 px-4 py-2">
-                        <p class="font-bold text-center">128GB</p>
-                        <P class="text-xs font-thin">From N170,000</P>
-                    </div>
-
-                    <div class="bg-capacity rounded mr-4 px-4 py-2">
+                    <div class="bg-capacity rounded w-1/2 py-1">
                         <p class="font-bold text-center">256GB</p>
-                        <P class="text-xs font-thin">From N200,000</P>
+                        <P class="text-xs font-thin text-center">From N500,000</P>
                     </div>
 
                 </div>
@@ -159,10 +152,10 @@
                 <p class="mt-8 mb-1">Choose a color</p>
 
                 <div class="flex">
-                    <div class="rounded-full bg-colors w-6 h-6 mr-2"></div>
-                    <div class="rounded-full bg-colora w-6 h-6 mr-2"></div>
-                    <div class="rounded-full bg-colorm w-6 h-6 mr-2"></div>
-                    <div class="rounded-full bg-colors w-6 h-6"></div>
+
+                    <div class="rounded-full bg-colorh w-6 h-6 mr-2"></div>
+                    <div class="rounded-full bg-colorw w-6 h-6 mr-2"></div>
+    
                 </div>
 
                 <p class="mt-10">Condition</p>
@@ -204,31 +197,11 @@
 
                     <div class="font-bold">
 
-                        <img src="../GetDPhone/img/R_Accessories/Samsung/Silicone Cover Black.png" alt="">
+                        <img src="../GetDPhone/img/R_Accessories/Huawei freebuds pro.png" alt="">
 
-                        <h2 class="text-center mt-4">Silicone Cover Black</h2>
+                        <h2 class="text-center mt-4">HUAWEI FreeBuds Pro</h2>
 
-                        <p class="text-center">N6,000</p>
-
-                    </div>
-
-                    <div class="font-bold">
-
-                        <img src="../GetDPhone/img/R_Accessories/Samsung/Galaxy buds mystic bronxe.png" alt="">
-
-                        <h2 class="text-center">Galaxy Buds Mystic Bronze</h2>
-
-                        <p class="text-center">N40,000</p>
-
-                    </div>
-
-                    <div class="font-bold">
-
-                        <img src="../GetDPhone/img/R_Accessories/Samsung/Wireless charger pad 9W.png" alt="">
-
-                        <h2 class="text-center">Wireless Charger Pad 9W</h2>
-
-                        <p class="text-center">N7,000</p>
+                        <p class="text-center">N45,000</p>
 
                     </div>
 
