Refactored the file to add font size to h1 element on larger screen

--- a/products(Iphone).html
+++ b/products(Iphone).html
@@ -139,7 +139,7 @@
 
             <div class="font-Gorditas mt-6 lg:mr-12">
 
-                <h1 class="text-3xl lg:font-bold">iPHONE 11 PRO MAX</h1>
+                <h1 class="text-4xl lg:font-bold lg:text-5xl">iPHONE 11 PRO MAX</h1>
 
                 <p class="mt-10 font-medium mb-1">Choose your capacity</p>
 
