--- a/products(Huawei).html
+++ b/products(Huawei).html
@@ -136,7 +136,7 @@
 
             <div class="font-Gorditas mt-6 lg:mr-12">
 
-                <h1 class="text-3xl lg:font-bold">Huawei Mate 40 Pro</h1>
+                <h1 class="text-4xl lg:font-bold lg:text-5xl">Huawei Mate 40 Pro</h1>
 
                 <p class="mt-10 font-medium mb-1">Choose your capacity</p>
 
