--- a/products(samsung).html
+++ b/products(samsung).html
@@ -138,7 +138,7 @@
 
             <div class="font-Gorditas mt-6 lg:mr-12">
 
-                <h1 class="text-3xl lg:font-bold">Samsung S20</h1>
+                <h1 class="text-4xl lg:font-bold uppercase lg:text-5xl">Samsung S20</h1>
 
                 <p class="mt-10 font-medium mb-1">Choose your capacity</p>
 
