Refactored file to change the image and price

--- a/cart(Huawei).html
+++ b/cart(Huawei).html
@@ -22,7 +22,7 @@
             }
         }
     </script>
-    <title>Samsung cart</title>
+    <title>Huawei cart</title>
 </head>
 
 <body class="font-Gorditas">
@@ -97,8 +97,8 @@
 
             <div class="flex flex-col lg:flex-row items-center">
 
-                <img src="../GetDPhone/img/Samsung/Samsung S20.png" alt="" class="sm:mr-20 md:mr-0">
-                <p class="text-sm mt-2 lg:mt-0">Samsung S20</p>
+                <img src="../GetDPhone/img/Huawei/Huawei Mate 40 Pro.png" alt="" class="sm:mr-20 md:mr-0">
+                <p class="text-sm mt-2 lg:mt-0">Huawei Mate 40 Pro</p>
 
             </div>
 
@@ -108,14 +108,14 @@
                 <option value="three">3</option>
             </select>
 
-            <p class="font-bold">N170,000</p>
+            <p class="font-bold">N500,000</p>
 
         </div>
 
         <div class="flex justify-end border-b border-black font-bold py-2">
 
             <p class="mr-14">Subtotal</p>
-            <p>N170,000</p>
+            <p>N500,000</p>
 
         </div>
 
