Refactored file to add a link to the navbar

--- a/contactUs.html
+++ b/contactUs.html
@@ -64,7 +64,7 @@
 
             <div class="flex px-10 items-center">
 
-                <a href="">
+                <a href="login.html">
                     <button class="bg-black border rounded text-gray-100 py-1 px-8 text-base mr-4">Log in</button>
                 </a>
 
